--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,9 @@
               <a class="menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+              <a class="menu-link active link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="">Contacts</a>
@@ -78,14 +80,21 @@
           </ul>
           <ul class="portfolio-list list">
             <li class="portfolio-list-item">
-              <a class="portfolio-list-link link" href=""
-                ><img
-                  class="portfolio-item-img"
-                  src="./images/portfolio/banking-app-interface-concept.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-list-link link" href="">
+                <div class="portfolio-overlay-container">
+                  <img
+                    class="portfolio-item-img"
+                    src="./images/portfolio/banking-app-interface-concept.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="service-card-content">
                   <h2 class="portfolio-item-title">
                     Banking App Interface Concept
@@ -95,14 +104,21 @@
               </a>
             </li>
             <li class="portfolio-list-item">
-              <a class="portfolio-list-link link" href=""
-                ><img
-                  class="portfolio-item-img"
-                  src="./images/portfolio/cashless-payment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-list-link link" href="">
+                <div class="portfolio-overlay-container">
+                  <img
+                    class="portfolio-item-img"
+                    src="./images/portfolio/cashless-payment.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="service-card-content">
                   <h2 class="portfolio-item-title">Cashless Payment</h2>
                   <p class="portfolio-item-description">Marketing</p>
@@ -110,14 +126,21 @@
               </a>
             </li>
             <li class="portfolio-list-item">
-              <a class="portfolio-list-link link" href=""
-                ><img
-                  class="portfolio-item-img"
-                  src="./images/portfolio/meditation-app.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-list-link link" href="">
+                <div class="portfolio-overlay-container">
+                  <img
+                    class="portfolio-item-img"
+                    src="./images/portfolio/meditation-app.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="service-card-content">
                   <h2 class="portfolio-item-title">Meditation App</h2>
                   <p class="portfolio-item-description">App</p>
@@ -125,14 +148,21 @@
               </a>
             </li>
             <li class="portfolio-list-item">
-              <a class="portfolio-list-link link" href=""
-                ><img
-                  class="portfolio-item-img"
-                  src="./images/portfolio/taxi-service.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-list-link link" href="">
+                <div class="portfolio-overlay-container">
+                  <img
+                    class="portfolio-item-img"
+                    src="./images/portfolio/taxi-service.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="service-card-content">
                   <h2 class="portfolio-item-title">Taxi Service</h2>
                   <p class="portfolio-item-description">Marketing</p>
@@ -140,14 +170,21 @@
               </a>
             </li>
             <li class="portfolio-list-item">
-              <a class="portfolio-list-link link" href=""
-                ><img
-                  class="portfolio-item-img"
-                  src="./images/portfolio/screen-illustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-list-link link" href="">
+                <div class="portfolio-overlay-container">
+                  <img
+                    class="portfolio-item-img"
+                    src="./images/portfolio/screen-illustrations.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="service-card-content">
                   <h2 class="portfolio-item-title">Screen Illustrations</h2>
                   <p class="portfolio-item-description">Design</p>
@@ -155,14 +192,21 @@
               </a>
             </li>
             <li class="portfolio-list-item">
-              <a class="portfolio-list-link link" href=""
-                ><img
-                  class="portfolio-item-img"
-                  src="./images/portfolio/online-courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-list-link link" href="">
+                <div class="portfolio-overlay-container">
+                  <img
+                    class="portfolio-item-img"
+                    src="./images/portfolio/online-courses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="service-card-content">
                   <h2 class="portfolio-item-title">Online Courses</h2>
                   <p class="portfolio-item-description">Marketing</p>
@@ -170,14 +214,21 @@
               </a>
             </li>
             <li class="portfolio-list-item">
-              <a class="portfolio-list-link link" href=""
-                ><img
-                  class="portfolio-item-img"
-                  src="./images/portfolio/instagram-stories-concept.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-list-link link" href="">
+                <div class="portfolio-overlay-container">
+                  <img
+                    class="portfolio-item-img"
+                    src="./images/portfolio/instagram-stories-concept.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="service-card-content">
                   <h2 class="portfolio-item-title">
                     Instagram Stories Concept
@@ -187,14 +238,21 @@
               </a>
             </li>
             <li class="portfolio-list-item">
-              <a class="portfolio-list-link link" href=""
-                ><img
-                  class="portfolio-item-img"
-                  src="./images/portfolio/organic-food.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-list-link link" href="">
+                <div class="portfolio-overlay-container">
+                  <img
+                    class="portfolio-item-img"
+                    src="./images/portfolio/organic-food.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="service-card-content">
                   <h2 class="portfolio-item-title">Organic Food</h2>
                   <p class="portfolio-item-description">Web Site</p>
@@ -202,14 +260,21 @@
               </a>
             </li>
             <li class="portfolio-list-item">
-              <a class="portfolio-list-link link" href=""
-                ><img
-                  class="portfolio-item-img"
-                  src="./images/portfolio/fresh-coffee.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+              <a class="portfolio-list-link link" href="">
+                <div class="portfolio-overlay-container">
+                  <img
+                    class="portfolio-item-img"
+                    src="./images/portfolio/fresh-coffee.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="service-card-content">
                   <h2 class="portfolio-item-title">Fresh Coffee</h2>
                   <p class="portfolio-item-description">Web Site</p>
